--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,9 @@
   },
   "exclude": [
     "dist",
-    "node_modules"
+    "node_modules",
+    "build.ts",
+    "src/index.ts"
   ],
   "include": [
     "next-env.d.ts",
