--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,3 +1,6 @@
 [serve.static]
 plugins = ["bun-plugin-tailwind"]
 env = "BUN_PUBLIC_*"
+
+[test]
+preload = ["./src/test-utils/dom-setup.ts", "./src/test-utils/setup.ts"]
