--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
+    "test": "bun test",
+    "test:watch": "bun test --watch",
     "kanji:build": "bunx tsx scripts/build-kanjiset.ts"
   },
   "dependencies": {
@@ -62,10 +64,16 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@happy-dom/global-registrator": "^20.1.0",
     "@tailwindcss/postcss": "^4.1.9",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/bun": "^1.3.5",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "happy-dom": "^20.1.0",
     "playwright": "^1.49.1",
     "postcss": "^8.5",
     "tailwindcss": "^4.1.9",
