chore(test): migrate from jest to playwright and add e2e tests

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@ dist
 coverage
 *.lcov
 
+# playwright
+test-results
+
 # logs
 logs
 _.log
@@ -35,3 +38,4 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 .vercel
 .next
 .env*.local
+playwright-report/
