--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
-    "test": "playwright test",
-    "test:ui": "playwright test --ui",
-    "test:debug": "playwright test --debug",
-    "test:headed": "playwright test --headed",
+    "test": "bun run test:unit",
+    "test:unit": "bun test src",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:headed": "playwright test --headed",
     "kanji:build": "bunx tsx scripts/build-kanjiset.ts",
     "prepare": "husky"
   },
