--- a/package.json
+++ b/package.json
@@ -70,12 +70,17 @@
     "zod": "3.25.76"
   },
   "devDependencies": {
+    "@happy-dom/global-registrator": "^20.1.0",
     "@playwright/test": "^1.57.0",
     "@tailwindcss/postcss": "^4.1.9",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bun": "^1.3.5",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "happy-dom": "^20.1.0",
     "husky": "^9.1.7",
     "playwright": "^1.57.0",
     "postcss": "^8.5",
