--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:headed": "playwright test --headed",
+    "wordset:build": "bunx tsx scripts/build-wordset.ts && WORDSET_LANG=en bunx tsx scripts/build-wordset.ts",
     "kanji:build": "bunx tsx scripts/build-kanjiset.ts",
     "prepare": "husky"
   },
