--- a/package.json
+++ b/package.json
@@ -73,6 +73,11 @@
   "devDependencies": {
     "@happy-dom/global-registrator": "^20.1.0",
     "@playwright/test": "^1.57.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^13.0.1",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^12.0.2",
+    "@semantic-release/release-notes-generator": "^14.1.0",
     "@tailwindcss/postcss": "^4.1.9",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
@@ -85,6 +90,7 @@
     "husky": "^9.1.7",
     "playwright": "^1.57.0",
     "postcss": "^8.5",
+    "semantic-release": "^25.0.2",
     "tailwindcss": "^4.1.9",
     "tw-animate-css": "1.3.3",
     "typescript": "^5"
