chore: ignore old versioned wordset files
Add gitignore pattern for wordset-*-v*.json files as they are being replaced by the new base filename pattern (wordset-*.json with embedded version)

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 .next
 .env*.local
 playwright-report/
+
+# old versioned wordset files (replaced by base filename pattern)
+public/wordset-*-v*.json
